src/z80asm/z80asm2/t/20-preproc/expected/incbin_03.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/incbin_03.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/incbin_03.asm...
t/20-preproc/input/incbin_03.asm:1:29: error: Unexpected token after INCBIN: extra
    incbin "file_not_found.bin" extra
                                ^
